--- a/roles/common/tasks/cleanup.yml
+++ b/roles/common/tasks/cleanup.yml
@@ -8,7 +8,7 @@
   loop:
   - /tmp/etcd-flannel.conf
   - /tmp/etcd-flannel.csr
-  - /etc/kubernetes/pki/etcd/ca.key
-  - /etc/kubernetes/pki/etcd/ca.srl
+  - /tmp/etcd-ca.key
+  - /etc/kubernetes/pki/etcd-ca.srl
   - "/tmp/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
   ignore_errors: true
