--- a/roles/control-plane/tasks/cleanup.yml
+++ b/roles/control-plane/tasks/cleanup.yml
@@ -14,7 +14,6 @@
   - /tmp/kube-scheduler.csr
   - /tmp/front-proxy-client.csr
   - /tmp/admin.csr
-  - /tmp/etcd-ca.srl
   - /tmp/controller-manager.crt
   - /tmp/scheduler.crt
   - /tmp/admin.key
@@ -24,5 +23,6 @@
   - /tmp/etcd-ca.key
   - /tmp/rbac.yaml
   - /etc/kubernetes/pki/ca.srl
+  - /etc/kubernetes/pki/etcd-ca.srl
   - /etc/kubernetes/pki/front-proxy-ca.srl
   ignore_errors: true
