use caddy for reverse proxy

--- a/roles/worker/tasks/cleanup.yml
+++ b/roles/worker/tasks/cleanup.yml
@@ -9,7 +9,7 @@
   - /tmp/kube-proxy.csr
   - /tmp/ca.key
   - /tmp/worker.conf
-  - /tmp/runc.amd64
+  - "/tmp/runc.{{ arch }}"
   - /etc/kubernetes/pki/ca.srl
   - "/tmp/kubelet.csr"
   - "/tmp/containerd-{{ containerd_version }}-{{ansible_system | lower}}-{{ arch }}.tar.gz"
