--- a/roles/worker/tasks/main.yml
+++ b/roles/worker/tasks/main.yml
@@ -6,36 +6,6 @@
   - include_tasks: cri.yml
   when: "'worker' in group_names"
 
-# nginx reverse proxy to reach control plane
-- block:
-  - block:
-    - name: Add nginx repo (RedHat)
-      ansible.builtin.copy:
-        src: files/nginx.repo
-        dest: /etc/yum.repos.d/nginx.repo
-        owner: root
-        group: root
-    - name: Install nginx (Redhat)
-      ansible.builtin.dnf:
-        name: nginx
-        update_cache: true
-        disable_gpg_check: true
-        state: present
-    when: ansible_os_family == 'RedHat'
-  - name: Create nginx reverse proxy config
-    ansible.builtin.template:
-      src: "nginx.conf.j2"
-      dest: /etc/nginx/nginx.conf
-      mode: '0600'
-      owner: root
-      group: root
-  - name: Start nginx service
-    ansible.builtin.service:
-      name: nginx
-      enabled: true
-      state: restarted
-  when: "'worker' in group_names and 'control_plane' not in group_names"
-
 - name: Download binaries
   ansible.builtin.get_url:
     url: "https://dl.k8s.io/v{{ kubernetes_version }}/bin/{{ansible_system | lower}}/{{ arch }}/{{item}}"
@@ -152,6 +122,9 @@
 
 - name: Generate Kubeconfigs (4/4)
   ansible.builtin.shell: "/usr/local/bin/kubectl config use-context default --kubeconfig=/etc/kubernetes/proxy.conf"
+
+- include_tasks: caddy.yml
+  when: "'control_plane' not in group_names and 'worker' in group_names"
 
 - name: Create systemd unit file
   ansible.builtin.template:
