--- a/roles/worker/tasks/pre_requisites.yml
+++ b/roles/worker/tasks/pre_requisites.yml
@@ -11,6 +11,7 @@
   community.general.modprobe:
     name: "{{item}}"
     state: present
+    persistent: present
   loop:
   - iptable_nat
   - iptable_raw
@@ -20,33 +21,33 @@
   - xt_conntrack
   - xt_owner
   - xt_tcpudp
-  when: ansible_os_family == 'RedHat'
-- name: Configure sysctl
-  sysctl:
-    name: "{{item.name}}"
-    value: "{{item.value}}"
-    state: present
-    reload: yes
-  ignore_errors: true
-  loop:
-  - {name: vm.overcommit_memory, value: 1}
-  - {name: kernel.panic_on_oops, value: 1}
-  - {name: kernel.panic, value: 10}
-  - {name: net.ipv4.ip_forward, value: 1}
-  - {name: net.bridge.bridge-nf-call-ip6tables, value: 1}
-  - {name: net.bridge.bridge-nf-call-iptables, value: 1}
-  - {name: kernel.pid_max, value: 4194303}
-  - {name: fs.inotify.max_user_instances, value: 8192}
-  - {name: fs.file-max, value: 1024000}
-  - {name: net.ipv4.ip_local_port_range, value: "11000 65535"}
-  - {name: net.ipv4.tcp_max_tw_buckets, value: 2000000}
-  - {name: net.ipv4.tcp_tw_reuse, value: 1}
-  - {name: net.ipv4.tcp_fin_timeout, value: 10}
-  - {name: net.ipv4.tcp_slow_start_after_idle, value: 0}
-  - {name: net.ipv4.tcp_low_latency, value: 1}
-  - {name: net.core.somaxconn, value: 40960}
-  loop_control:
-    label: "{{ item.name }}"
+  when: ansible_facts.os_family == 'RedHat'
+- name: Configure sysctl via config file
+  ansible.builtin.copy:
+    dest: /etc/sysctl.d/99-kubernetes.conf
+    owner: root
+    group: root
+    mode: '0644'
+    content: |
+      vm.overcommit_memory = 1
+      kernel.panic_on_oops = 1
+      kernel.panic = 10
+      net.ipv4.ip_forward = 1
+      net.bridge.bridge-nf-call-ip6tables = 1
+      net.bridge.bridge-nf-call-iptables = 1
+      kernel.pid_max = 4194303
+      fs.inotify.max_user_instances = 8192
+      fs.file-max = 1024000
+      net.ipv4.ip_local_port_range = 11000 65535
+      net.ipv4.tcp_max_tw_buckets = 2000000
+      net.ipv4.tcp_tw_reuse = 1
+      net.ipv4.tcp_fin_timeout = 10
+      net.ipv4.tcp_slow_start_after_idle = 0
+      net.ipv4.tcp_low_latency = 1
+      net.core.somaxconn = 40960
+- name: Reload sysctl
+  ansible.builtin.command: sysctl --system
+  changed_when: false
 - name: Disable swap (1/2)
   shell: |
     swapoff -a
