--- a/roles/common/tasks/cni.yml
+++ b/roles/common/tasks/cni.yml
@@ -1,5 +1,5 @@
 - set_fact:
-    arch: "{{ architecture[ansible_architecture|lower] }}"
+    arch: "{{ architecture[ansible_facts.architecture|lower] }}"
 
 - name: Install kernel modules
   community.general.modprobe:
@@ -11,19 +11,19 @@
 
 - name: Download CNI binaries release
   ansible.builtin.get_url:
-    url: "https://github.com/containernetworking/plugins/releases/download/v{{cni_version}}/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
-    dest: "/tmp/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
+    url: "https://github.com/containernetworking/plugins/releases/download/v{{cni_version}}/cni-plugins-{{ansible_facts.system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
+    dest: "/tmp/cni-plugins-{{ansible_facts.system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
     force: false
     mode: '0755'
 
 - name: Untar CNI binaries release
   ansible.builtin.unarchive:
-    src: "/tmp/cni-plugins-{{ansible_system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
+    src: "/tmp/cni-plugins-{{ansible_facts.system | lower}}-{{ arch }}-v{{cni_version}}.tgz"
     dest: "/opt/cni/bin"
     remote_src: true
 
 - set_fact:
-    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
+    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_facts.default_ipv4.address}}{% endif %}"
 
 - name: Copy conf
   ansible.builtin.copy:
