--- a/roles/common/tasks/main.yml
+++ b/roles/common/tasks/main.yml
@@ -15,7 +15,7 @@
 - name: Update apt cache
   apt:
     update_cache: yes
-  when: ansible_os_family == 'Debian'
+  when: ansible_facts['os_family'] == 'Debian'
 
 - name: Install Base packages
   package:
@@ -31,16 +31,16 @@
       name: iscsid
       state: started
       enabled: yes
-  when: ansible_os_family == 'RedHat'
+  when: ansible_facts['os_family'] == 'RedHat'
 
 - name: Install kernel pre-requisites
   ansible.builtin.shell: "dnf install -y kernel-modules-extra"
   async: 300
   poll: 0
-  when: ansible_os_family == 'RedHat'
+  when: ansible_facts['os_family'] == 'RedHat'
 
 - set_fact:
-    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_default_ipv4.address}}{% endif %}"
+    ip_address: "{% if internal_ip is defined and internal_ip != '' %}{{internal_ip}}{% else %}{{ansible_facts.default_ipv4.address}}{% endif %}"
 - set_fact:
     all_ips: "{% for host in groups['all'] %}{{hostvars[host]['ip_address']}}{% if not loop.last %},{% endif %}{% endfor %}"
 
