--- a/roles/control-plane/tasks/cleanup.yml
+++ b/roles/control-plane/tasks/cleanup.yml
@@ -1,5 +1,5 @@
 - set_fact:
-    arch: "{{ architecture[ansible_architecture|lower] }}"
+    arch: "{{ architecture[ansible_facts.architecture|lower] }}"
 
 - name: Delete temporary files
   ansible.builtin.file:
