--- a/create_cluster.yml
+++ b/create_cluster.yml
@@ -6,7 +6,7 @@
   - name: Wait for SSH to be available
     wait_for:
       port: 22
-      host: "{{ ansible_facts.host }}"
+      host: "{{ ansible_host }}"
       delay: 1
       timeout: 120
       state: started
