--- a/roles/control-plane/tasks/main.yml
+++ b/roles/control-plane/tasks/main.yml
@@ -188,11 +188,12 @@
     PATH: "/usr/local/bin:{{ ansible_facts.env.PATH }}"
   run_once: true
 
-- name: Install coredns
+- name: Install coredns and gateway api
   ansible.builtin.shell: |
     /usr/local/bin/helm repo add coredns https://coredns.github.io/helm
     /usr/local/bin/helm repo update
     /usr/local/bin/helm --namespace=kube-system upgrade --install coredns --version {{coredns_version}} --set service.clusterIP=10.96.0.10 coredns/coredns
+    /usr/local/bin/kubectl apply --server-side -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.4.1/standard-install.yaml
   run_once: true
 
 - include_tasks: cleanup.yml
